assets/sass/style.scss
html {
    font-size: 14pt;
    background-color: var(--bg-color);
}

// Placeholders
%link-default {
    color: var(--red-color);
    text-decoration: none;

    & * {
        color: var(--red-color);
    }

    &:hover {
        color: var(--red-color);
        text-decoration: underline;
    }
}

%link-dark {
    color: var(--fg-color);
    text-decoration: none;

    & * {
        color: var(--fg-color);
    }

    &:hover {
        color: var(--fg-color);
        text-decoration: underline;
    }
}

%table-cell {
    border: 1px solid #cccccc;
    padding: 6px 12px;
    text-align: left;
    vertical-align: top;
}

body {
    color: var(--fg-color);
    background-color: var(--bg-color);
    font-family: $font-family;
    line-height: 1.55;

    padding-left: 20px;
    padding-right: 20px;

    >* {
        margin-left: auto;
        margin-right: auto;
    }
}

// Prevents superscripts from creating extra unwanted space
sub,
sup {
    line-height: 0;
}

hr,
.horizontal-rule {
    margin-top: 1rem;
    margin-bottom: 1rem;
    border: 0;
    border-top: 1px solid rgba(0, 0, 0, .1);
}

#header {
    display: flex;
    flex-direction: column;
    margin-top: 3rem;
    max-width: $max-width;
}

#footer {
    display: flex;
    flex-direction: column;
    margin-bottom: 1rem;
    max-width: $max-width;
}

#site-title {
    @extend %link-dark;
    font-size: 24pt; // i.e. not relative
    letter-spacing: 0.5px;
    white-space: nowrap;
    margin-right: 0.5em;
}

nav {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

#font-size-buttons {
    display: flex;
    justify-content: flex-end;

    // I could come up with a smarter (probably more JavaScript-y) way to do
    // this, but why bother?
    @media (max-width: 540px) {
        justify-content: flex-start;
        margin-top: 0.5em;
    }
}

#main-navigation {
    display: flex;
    align-items: center;
    gap: 0.5em;

    >.navigation-item {}

    >.navigation-link {
        @extend %link-default;
        font-size: 14pt;
    }

    >span {}
}

.navigation-text {
    font-size: 14pt;
}

#content {
    max-width: $max-width;
    font-size: $font-size;
    counter-reset: section subsection subsubsection;

    a {
        @extend %link-default;
    }

    .postlink {
        @extend %link-dark;
    }

    .extlink {
        @extend %link-dark;
    }

    .footnote-ref {
        @extend %link-default;
        font-size: 95%;
    }

    .footnote-backref {
        @extend %link-default;
        font-size: 75%;
        position: relative;
        top: -0.29em;
    }

    .extlink::after {
        position: relative;
        font-family: "Font Awesome 5 Free";
        content: "\f08e";
        font-weight: 900;
        margin-left: 0.25em;
        font-size: 50%;
        top: -0.65em;
        color: var(--red-color);
        font-feature-settings: "caps";
        font-variant-numeric: normal;
    }

    .crossref {
        @extend %link-dark;
        font-variant: small-caps;
        letter-spacing: 0.02em;
    }

    p {
        margin-top: 0;
        margin-bottom: $y-small;
        hyphens: auto;
    }

    del {
        opacity: 75%;
    }

    .post-container {
        h1 {
            counter-reset: section;
        }

        h2::before {
            counter-reset: subsection;
            counter-increment: section;
            font-variant-numeric: tabular-nums;
            content: counter(section);
            padding-right: 0.6em;
        }

        h3::before {
            counter-reset: subsubsection;
            counter-increment: subsection;
            font-variant-numeric: tabular-nums;
            content: counter(section) "." counter(subsection);
            padding-right: 0.6em;
        }
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        font-size: medium;
        font-weight: bold;
        margin: 1.2 * $y-medium 0 $y-small 0;
    }

    h1 {
        font-size: 1.5em;
        letter-spacing: 0.02em;
        margin: 1.3em 0 1em 0;
    }

    @for $i from 2 through 4 {
        h#{$i} {
            font-size: $font-size + 0.1 * (4 - $i);
        }
    }

    img {
        display: block;
        margin: $y-medium auto;
        max-width: 100%;
    }

    .avatar>img {
        border-radius: 50%;
        float: right;
        margin: -8px 0 0 16px;
        height: $avatar-size;
        width: $avatar-size;
    }

    ol {
        counter-reset: list;
        list-style-type: decimal;
        padding-left: 0.5em;
        margin-bottom: $y-small;

        &>li {
            list-style-position: outside;
            margin-left: 1.25em;
        }
    }

    .container>ol {
        padding-left: 0.5em;
    }

    .footnotes>ol {
        padding-left: 0;
    }

    ul {
        list-style: inside;
        padding-left: 0.5em;
        margin-bottom: $y-small;

        &>li {
            list-style-position: outside;
            margin-left: 1.25em;
        }
    }

    .container>ul {
        padding-left: 0.5em;
    }

    .footnotes>ul {
        padding-left: 0.5em;
    }

    table {
        margin: $y-medium auto;
        width: 100%;

        & th {
            @extend %table-cell;
            font-weight: bold;
        }

        & td {
            @extend %table-cell;
        }

        & tr:nth-child(2n + 1) {
            background-color: #ffffff;
        }
    }

    blockquote {
        border-left: 4px solid;
        border-color: #bbbbbb;
        font-size: 0.9em;
        margin: $y-medium;
        padding: 8px 16px;
    }

    blockquote>p:last-child {
        margin-bottom: 0;
    }

    pre {
        display: block;
        color: var(--fg-color);
    }

    pre {
        margin-top: 0;
        margin-bottom: 1rem;
        overflow: auto;
        -ms-overflow-style: scrollbar;
    }

    code {
        color: var(--fg-color);
        background-color: var(--bg-color);
        padding: 1px 2px;
        font-family: 'Fira Mono', monospace;
        font-size: 0.9em;
        hyphens: none;
    }

    pre code {
        all: unset;
    }

    pre code span {
        font-family: 'Fira Mono', monospace;
    }

    .highlight {
        // background-color: var(--bg-color);
        font-size: 0.8em;
        margin: $y-medium auto 0 0.5em;

        &>pre {
            padding: 8px 8px;
        }
    }
}

#footer {
    a {
        @extend %link-dark;
    }

    .footer-bar {
        display: flex;
        flex-direction: row;
        align-items: center;

        >a {
            margin-right: 0.25em;
        }

        // This is either the JS ko-fi button or the image version; both are divs.
        div:last-of-type {
            margin: 0 0 0 auto;
        }
    }

    // ko-fi button
    .btn-container {
        transform: scale(0.8);
        padding: 0;
    }
}

.warning-callout {
    display: none;
    padding: $y-small 1em $y-small 1em;
    background-color: rgba($color: var(--callout-red-raw), $alpha: var(--callout-alpha));
    border: 1px dotted rgba($color: var(--callout-red-raw), $alpha: 0.5);
}

div#bibbase {

    // Remove annoying 'generated by BibBase'.
    >div:first-of-type {
        display: none;
    }

    a.dropdown-toggle::after {
        content: "";
    }

    img:not([alt="bibbase.org"]) {
        display: none;
    }

    img[alt="bibbase.org"] {
        margin: 0;
    }

    b.caret {
        display: none;
    }

    a.dropdown-toggle {
        &:hover {
            color: var(--fg-color);
            text-decoration: none;
        }
    }

    #bibbase_header {
        .nav a {
            color: var(--fg-color);
        }
    }

    #bibbase_body {
        padding-top: 0;

        .bibbase_group {
            font-style: normal;
            text-shadow: none;
            background-color: var(--bg-color);
            padding-left: 20px;
        }

        span.bibbase_paper_content.dontprint a::after {
            display: none !important;
        }

        span.bibbase_paper_content:first-child {
            // display: none !important;
            display: none !important;
            min-width: 0 !important;
            margin-left: -2px;
        }
    }
}

.font-size-btn {
    display: inline-block;
    width: 50px;
    cursor: pointer;
    padding: 5px 16px;
    font-size: 14px;
    font-weight: 500;
    font-family: 'Fira Mono', monospace;
    line-height: 20px;
    vertical-align: middle;
    border: 1px solid;
    border-radius: 6px;
    margin: 1pt;
    color: var(--fg-color);
    background-color: var(--bg-color);
    border-color: var(--fg-color);
    // box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
    transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
    transition-property: color, background-color, border-color;

    // &:hover {
    //     text-shadow: 0 0 3px var(--bg-color);
    //     color: color-mod(var(--fg-color) tint(50%));
    //     background-color: color-mod(var(--bg-color) tint(50%));
    //     border-color: color-mod(var(--fg-color) tint(50%));
    //     transition-duration: 0.1s;
    // }
}

// MathJax stuff
code.has-jax {
    -webkit-font-smoothing: antialiased;
    background: inherit !important;
    border: none !important;
    font-size: 100%;
}

